change of the background in text input area

--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -19,7 +19,7 @@
   margin-bottom: 10px;
   margin-left: 12px;
   margin-right: 12px;
-  background: #444656;
+  background: 'transparent'
 }
 
 .questionInputSendButtonContainer {
