changed the stopGenerating button ui

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -220,12 +220,13 @@
   bottom: 116px;
   border: 1px solid #d1d1d1;
   border-radius: 16px;
+  background-color: #FFFFFF
 }
 
 .stopGeneratingIcon {
   width: 14px;
   height: 14px;
-  color: #424242;
+  background-color: #fc565e;
 }
 
 .stopGeneratingText {
