--- a/frontend/src/components/ProductInformation/ProductInfo.module.css
+++ b/frontend/src/components/ProductInformation/ProductInfo.module.css
@@ -1,7 +1,8 @@
 .mainStackContainer {
     height: 100vh;
     overflow: hidden;
-    width: 100%
+    width: 100%;
+    margin-top:30px
 }
  
 .headerMainStackContainer {
@@ -61,6 +62,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    padding: 0px 20px 0px 20px;
     align-items: center;
 }
  
@@ -223,7 +225,7 @@
     }
  
     .headingText {
-        font-size: 28px;
+        font-size: 24px;
     }
 }
  
