--- a/frontend/src/components/Recommendations/Recommendations.module.css
+++ b/frontend/src/components/Recommendations/Recommendations.module.css
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 30px;
+    width: 100%;
 }
  
 .contentStackContainer {
