--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -8,24 +8,24 @@
   background-image: url("../../assets//BP-BG.png");
   /* background: linear-gradient(200deg, rgba(58,73,81,1) 0%, rgba(35,44,48,1) 80%, rgba(58,73,81,1) 99%); */
 }
-
+ 
 .header {
   background-color: #f2f2f2;
 }
-
+ 
 .headerContainer {
   display: flex;
   justify-content: left;
   align-items: center;
 }
-
+ 
 .headerTitleContainer {
   display: flex;
   align-items: center;
   margin-left: 14px;
-  text-decoration: none; 
+  text-decoration: none;
 }
-
+ 
 .headerTitle {
   font-style: normal;
   font-weight: 600;
@@ -35,24 +35,24 @@
   align-items: flex-end;
   color: #242424;
 }
-
+ 
 .headerIcon {
   height: 32px;
   width: auto;
   margin-left: 36px;
 }
-
+ 
 .shareButtonContainer {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-right: 20px;
 }
-
+ 
 .shareButton {
   color: #ffffff;
 }
-
+ 
 .shareButtonText {
   font-style: normal;
   font-weight: 600;
@@ -62,7 +62,7 @@
   align-items: center;
   color: #ffffff;
 }
-
+ 
 .urlTextBox {
   font-style: normal;
   font-weight: 400;
@@ -72,7 +72,7 @@
   border: 1px solid #d1d1d1;
   border-radius: 4px;
 }
-
+ 
 .copyButtonContainer {
   box-sizing: border-box;
   display: flex;
@@ -85,16 +85,16 @@
   border: 1px solid #d1d1d1;
   border-radius: 4px;
 }
-
+ 
 .copyButtonContainer:hover {
   cursor: pointer;
   background: #d1d1d1;
 }
-
+ 
 .copyButton {
   color: #424242;
 }
-
+ 
 .copyButtonText {
   font-style: normal;
   font-weight: 600;
@@ -104,125 +104,124 @@
   align-items: center;
   color: #242424;
 }
-
+ 
+ 
 @media (max-width: 480px) {
   .headerTitleContainer {
     margin-left: 4px;
   }
-
+ 
   .headerIcon {
     margin-left: 26px;
   }
 }
-
+ 
 .inputField {
   display: flex;
-  align-items: center; 
+  align-items: center;
   width: 100%;
   height: 56px;
   border-radius: 35px;
   padding: 15px;
-  background-color: #313F46;
+  background-color: #909B97;
+ 
   box-shadow: none;
   border: 2px solid #378588;
 }
-
+ 
 .mainInputField {
   display: flex;
-  align-items: center; 
+  align-items: center;
   width: 100%;
-  height: 56px;
-  border-radius: 35px;
-  padding: 15px;
-  background-color: #313F46;
+  padding: 15px 10px;
+  border-radius: 50px;
+  background-color: #909B97;
+  color: black;
   box-shadow: none;
 }
 .focusInputField {
   display: flex;
-  align-items: center; 
+  align-items: center;
   width: 100%;
-  height: 180px;
-  border-radius: 16px;
-  padding: 15px;
-  background-color: #313F46;
+  height: 260px;
+  border-radius: 50px;
+  background-color: #909B97;
+ 
   box-shadow: none;
 }
-
+ 
 .textFieldDiv{
   width:"100%"
 }
-
+ 
+@media all and (max-width:575px){
+  .mainInputField{
+    padding: 14px 10px;
+  }
+}
+/*
 @media (max-width: 480px) {
   .inputField {
     display: flex;
-    align-items: center; 
+    align-items: center;
     width: 100%;
     border-radius: 35px;
     padding: 15px;
-    background-color: #313F46;
     box-shadow: none;
     border: 2px solid #378588;
   }
-
+ 
   .focusInputField {
     display: flex;
-    align-items: center; 
-    width: 380px;
+    align-items: center;
     height: 180px;
     border-radius: 16px;
     padding: 15px;
-    background-color: #313F46;
     box-shadow: none;
   }
-}
-
-@media (max-width: 1000px) and (min-width: 500px) {
+} */
+ 
+/* @media (max-width: 1000px) and (min-width: 500px) {
   .mainInputField {
     display: flex;
-    align-items: center; 
+    align-items: center;
     width: 100%;
-    height: 80px;
     border-radius: 50px;
     padding: 15px;
-    background-color: #313F46;
     box-shadow: none;
   }
-}
-
+} */
+/*
 @media (max-width: 2520px) and (min-width: 1000px) {
   .inputField {
     display: flex;
-    align-items: center; 
+    align-items: center;
     width: 35%;
     height: 72px;
     border-radius: 35px;
     padding: 15px;
-    background-color: #313F46;
     box-shadow: none;
     border: 2px solid #378588;
   }
   .mainInputField {
     display: flex;
-    align-items: center; 
+    align-items: center;
     width: 100%;
-    height: 90px;
     border-radius: 50px;
     padding: 15px;
-    background-color: #313F46;
     box-shadow: none;
   }
   .focusInputField {
     display: flex;
-    align-items: center; 
+    align-items: center;
     width: 100%;
     height: 255px;
     border-radius: 24px;
     padding: 15px;
-    background-color: #313F46;
     box-shadow: none;
   }
-
+ 
   .textFieldDiv{
     width:"86%"
   }
-}
+} */
