--- a/frontend/src/components/ProductInformation/ProductInfo.module.css
+++ b/frontend/src/components/ProductInformation/ProductInfo.module.css
@@ -1,8 +1,9 @@
 .mainStackContainer {
-    height: 100vh;
+    /* height: 100vh; */
     overflow: hidden;
     width: 100%;
-    margin-top:30px
+    /* margin-top:30px */
+    max-width: 1040px;
 }
  
 .headerMainStackContainer {
@@ -10,10 +11,10 @@
     width: 100%;
     z-index: 1000;
     color: #fff;
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
     text-align: center;
     top: 0;
-    height: 130px;
+    /* height: 130px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,46 +24,58 @@
  
 .headerStackContainer {
     width: 100%;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 20px;
+    max-width: 1040px;
+
  
 }
  
 .contentMainStackContainer {
     /* margin-top: 130px; */
     /* margin-bottom: 70px; */
-    overflow-y: auto;
-    padding: 20px;
-    height: calc(100vh - 200px);
+    /* overflow-y: auto; */
+    margin-top: 15px;
+    padding: 20px 0px 0px 0px;
+    /* height: calc(100vh - 200px); */
     display: flex;
     flex-direction: column;
     align-items: center;
 }
  
 .contentStackContainer {
+    max-width: 1040px;
+    padding: 0px 20px;
+    display: flex;
+    column-gap: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.contentStackContainerWalkthrough {
     width: 100%;
     padding: 0px 20px 0px 20px;
 }
  
 .footerMainStackContainer {
-    position: sticky;
+    /* position: sticky; */
     width: 100%;
     z-index: 1000;
     color: #fff;
-    padding: 20px 20px;
+    /* padding: 20px 20px; */
     text-align: center;
-    bottom: 0;
-    height: 70px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* bottom: 0; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
 }
  
 .footerStackContainer {
     width: 100%;
-    height: 100%;
+    max-width: 1040px;
+
     display: flex;
     flex-direction: column;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 20px;
     align-items: center;
 }
  
@@ -70,7 +83,7 @@
     display: flex;
     width: 100%;
     padding: 0px;
-    align-items: center;
+    align-items: flex-start;
     padding: 0 0 10px;
 }
  
@@ -78,7 +91,7 @@
     color: white;
     display: flex;
     align-items: flex-start;
-    font-size: 20px;
+    font-size: 26px;
     line-height: 100%;
 }
  
@@ -86,23 +99,21 @@
     width: 100%;
     font-size: large;
     border-radius: 10px;
+    padding: 25px;
     background: black;
     border: none
 }
  
-@media (max-width: 599px) {
+@media (max-width: 767px) {
     .contentMainStackContainer {
-        height: calc(100vh - 220px);
+        /* height: calc(100vh - 220px); */
     }
  
     .contentStackContainer {
-        width: 100%;
-        padding: 0px;
- 
-    }
- 
-    .footerMainStackContainer {
-        height: 90px;
+        
+        row-gap: 10px;
+        flex-direction: column;
+        flex-wrap: nowrap;
     }
  
     .headerMainStackContainer {
@@ -111,156 +122,21 @@
  
     .headerStackContainer {
         width: 100%;
-        padding: 0px;
- 
+        padding:0px 20px;
     }
  
     .footerStackContainer {
         width: 100%;
+        padding:0px 20px;
     }
  
     .button {
         width: 100%;
-        height: 100%;
+        margin-top: 20px;
+        height: 56px;
     }
  
     .headingText {
         font-size: 20px;
-    }
-}
- 
-/* Small devices (phones) */
-@media (min-width: 600px) and (max-width: 959px) {
-    .contentStackContainer {
-        width: 90%;
-    }
- 
-    .footerMainStackContainer {
-        height: 130px;
-    }
- 
-    .headerMainStackContainer {
-        height: 200px;
-    }
- 
-    .headerStackContainer {
-        width: 90%;
-    }
- 
-    .footerStackContainer {
-        width: 90%;
-    }
- 
-    .button {
-        width: 100%;
-        height: 100%;
-        font-size: 22px;
-    }
- 
-    .headingText {
-        font-size: 32px;
-    }
-}
- 
-/* Medium devices (tablets) */
-@media (min-width: 960px) and (max-width: 1279px) {
-    .contentStackContainer {
-        width: 90%;
-    }
- 
-    .footerMainStackContainer {
-        height: 130px;
-    }
- 
-    .headerMainStackContainer {
-        height: 200px;
-    }
- 
-    .headerStackContainer {
-        width: 90%;
-    }
- 
-    .footerStackContainer {
-        width: 90%;
-    }
- 
-    .button {
-        width: 100%;
-        height: 100%;
-        font-size: 28px;
- 
-    }
- 
-    .headingText {
-        font-size: 28px;
- 
-    }
-}
- 
-/* Large devices (desktops) */
-@media (min-width: 1280px) and (max-width: 1898px) {
-    .contentStackContainer {
-        width: 60%;
-    }
- 
-    .footerMainStackContainer {
-        height: 130px;
-    }
- 
-    .headerMainStackContainer {
-        height: 200px;
-    }
- 
-    .headerStackContainer {
-        width: 60%;
-    }
- 
-    .footerStackContainer {
-        width: 60%;
-    }
- 
-    .button {
-        width: 100%;
-        height: 100%;
-        font-size: 28px;
- 
-    }
- 
-    .headingText {
-        font-size: 24px;
-    }
-}
- 
-/* Extra large devices (large desktops) */
-@media (min-width: 1899px) {
-    .contentStackContainer {
-        width: 60%;
-    }
- 
-    .footerMainStackContainer {
-        height: 130px;
-    }
- 
-    .headerMainStackContainer {
-        height: 200px;
-    }
- 
-    .headerStackContainer {
-        width: 60%;
-    }
- 
-    .footerStackContainer {
-        width: 60%;
-    }
- 
-    .button {
-        width: 100%;
-        height: 100%;
-        font-size: 32px;
- 
-    }
- 
-    .headingText {
-        font-size: 32px;
     }
 }
