--- a/frontend/src/components/Recommendations/Recommendations.module.css
+++ b/frontend/src/components/Recommendations/Recommendations.module.css
@@ -1,51 +1,16 @@
 .contentMainStackContainer {
-    overflow-y: auto;
-    padding: 10px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
     width: 100%;
 }
  
 .contentStackContainer {
     width: 100%;
-    gap:20px;
-    padding: 0px 20px 0px 20px;
+    max-width: 1040px;
+    gap:15px;
+    padding: 0px 20px;
 }
- 
- 
-@media (max-width: 599px) {
-    .contentStackContainer {
-        width: 100%;
-        padding: 0px;
-    }
-}
- 
-/* Small devices (phones) */
-@media (min-width: 600px) and (max-width: 959px) {
-    .contentStackContainer {
-        width: 90%;
-    }
-}
- 
-/* Medium devices (tablets) */
-@media (min-width: 960px) and (max-width: 1279px) {
-    .contentStackContainer {
-        width: 90%;
-    }
-}
- 
-/* Large devices (desktops) */
-@media (min-width: 1280px) and (max-width: 1898px) {
-    .contentStackContainer {
-        width: 60%;
-    }
-}
- 
-/* Extra large devices (large desktops) */
-@media (min-width: 1899px) {
-    .contentStackContainer {
-        width: 60%;
-    }
+@media all and (orientation=portrait){
+
 }
